add models for swagger and updated docs
