# internal/http-server/handlers/post/save/save.go
@@ -10,6 +10,7 @@ import (
 
 	"github.com/go-chi/chi/v5/middleware"
 	"github.com/go-chi/render"
+	_ "github.com/solumD/go-blog-api/internal/http-server/models"
 	resp "github.com/solumD/go-blog-api/internal/lib/api/response"
 	"github.com/solumD/go-blog-api/internal/lib/logger/sl"
 )
@@ -35,7 +36,9 @@ type PostSaver interface {
 // @ID          create
 // @Accept      json
 // @Produde     json
-// @Param       input    body Request true "post info"
+// @Param       input   body     Request true "post info"
+// @Success     200     {object} models.SaveSuccess
+// @Failure     400,500 {object} models.SaveError
 // @Router      /post/create [post]
 func New(ctx context.Context, log *slog.Logger, postSaver PostSaver) http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
